syntax = "proto3";
package player;

service MusicPlayer {
  rpc TogglePause(TogglePauseRequest) returns (TogglePauseResponse);
  rpc SkipNext(SkipNextRequest) returns (SkipNextResponse);
  rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);
  rpc VolumeUp(VolumeUpRequest) returns (VolumeReply);
  rpc VolumeDown(VolumeDownRequest) returns (VolumeReply);
  rpc CycleLoop(CycleLoopRequest) returns (CycleLoopReply);
  rpc SpeedUp(SpeedUpRequest) returns (SpeedReply);
  rpc SpeedDown(SpeedDownRequest) returns (SpeedReply);
  rpc ToggleGapless(ToggleGaplessRequest) returns (ToggleGaplessReply);
  rpc SeekForward(SeekForwardRequest) returns (PlayerTime);
  rpc SeekBackward(SeekBackwardRequest) returns (PlayerTime);
  rpc ReloadConfig(ReloadConfigRequest) returns (EmptyReply);
  rpc ReloadPlaylist(ReloadPlaylistRequest) returns (EmptyReply);
  rpc PlaySelected(PlaySelectedRequest) returns (EmptyReply);
  rpc SkipPrevious(SkipPreviousRequest) returns (EmptyReply);

  rpc SubscribeServerUpdates(EmptyReply) returns (stream StreamUpdates);
}

message TogglePauseRequest {}
message TogglePauseResponse {
  uint32 status = 1;
}

message SkipNextRequest {}
message SkipNextResponse {}

message PlayerTime {
  Duration position = 1;
  Duration total_duration = 2;
}

message GetProgressRequest {}
message GetProgressResponse {
  PlayerTime progress = 1;
  uint32 current_track_index = 3;
  uint32 status = 4;
  // actually a u16, but protobuf does not support types lower than 32 bits
  uint32 volume = 5;
  int32 speed = 6;
  bool gapless = 7;
  bool current_track_updated = 8;
  string radio_title = 9;
}

message VolumeUpRequest {}
message VolumeDownRequest {}
message VolumeReply {
  // actually a u16, but protobuf does not support types lower than 32 bits
  uint32 volume = 1;
}

message CycleLoopRequest {}
message CycleLoopReply {}

message SpeedUpRequest {}
message SpeedDownRequest {}
message SpeedReply {
  int32 speed = 1;
}

message ToggleGaplessRequest {}
message ToggleGaplessReply {
  bool gapless = 1;
}

message SeekForwardRequest {}
message SeekBackwardRequest {}

message ReloadConfigRequest {}
message ReloadPlaylistRequest {}

message EmptyReply {}

message PlaySelectedRequest {}
message SkipPreviousRequest {}

// using a custom Duration that matches rust's definition, as rust's may not fit
// into google's well-known Duration
message Duration {
  uint64 secs = 1;
  uint32 nanos = 2;
}

// all updates that can happen from the server side, without the client to have to ask explicitly
// naming convention for the stream update specific messages is to add the "Update" prefix, even if it already exists
message StreamUpdates {
  oneof type {
    UpdateMissedEvents missed_events = 1;
    UpdateVolumeChanged volume_changed = 2;
    UpdateSpeedChanged speed_changed = 3;
    UpdatePlayStateChanged play_state_changed = 4;
    // UpdateTrackChanged track_changed = 5;
  }
}

// Indicate that some events could not be send
// Like a "Lagged" Error from tokio-stream
message UpdateMissedEvents {
  uint64 amount = 1;
}

// The Volume changed, send new information
message UpdateVolumeChanged {
  // reuse the existing message
  VolumeReply msg = 1;
}

// The Speed changed, send new information
message UpdateSpeedChanged {
  // reuse the existing message
  SpeedReply msg = 1;
}

// TODO: is play-state (playing / paused / ??) the only things this should do?
message UpdatePlayStateChanged {
  // reuse the existing message
  TogglePauseResponse msg = 1;
}

// // The track changed, send new information
// message UpdateTrackChanged {
//   // TODO: do track changed information
// }
